# grouphug

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml
.github/workflows/: format.yml  release.yaml  test.yaml
examples/: from-readme.ipynb  glue.ipynb  lm.ipynb  neox.ipynb  sentiment.ipynb
grouphug/: collator.py  config.py  dataset_formatter.py  trainer.py
grouphug/heads/: base.py
tests/: test_dataset_formatter.py  test_model.py
