[project]
name = "grouphug"
version = "0.9.0"
description = "GroupHug is a library with extensions to 🤗 transformers for multitask language modelling."
authors = [
    { name = "Mouhaned Chebaane"}, 
    { name = "Sander Land"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["transformers","language modelling","machine learning","classification"]

dependencies = [
    "datasets==2.0.*",
    "evaluate==0.3.*",
    "numpy==1.21.*",
    "regex==2022.3.*",
    "Unidecode==1.3.*",
    "demoji==1.1.*",
    "transformers==4.20.0",
    "sentencepiece==0.1.96",
    "torch==1.10.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==7.1.*",
    "pytest-subtests==0.7.*",
    "jupyterlab==3.3.*",
    "jupyterlab-code-formatter==1.4.*",
    "ruff==0.7.*",
    "ipywidgets==7.6.*",
    "pre-commit==2.13.*",
    "matplotlib==3.4.*",
    "Werkzeug<2.1",
    "scikit-learn==1.0.*",
    "Sphinx==5.0.*",
    "sphinx-rtd-theme==1.0.*",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E741"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
